--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "receipe-mangement-system",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "type": "commonjs",
   "scripts": {
     "start":"nodemon server.js",
